# ai-sqlite

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
sqld_ext/: README.md  trusted.lst
src/aisql/: config.py  db.py
tests/: test_fts.py  test_table.py  test_utils.py
