# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
timeout = 90
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--doctest-modules -vv --no-flaky-report"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
    # "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
markers = ["organization: marks tests related to Organization endpoint tests"]

# -----------------------------------------------------------------------------
# Coverage configuration
# https://coverage.readthedocs.io/en

[tool.coverage.run]
source = ["aisql"]
relative_files = true
concurrency = ["multiprocessing", "thread", "greenlet"]
parallel = true

# [tool.coverage.paths]
# source = ["src"]

# -----------------------------------------------------------------------------
# Ruff configuration
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py312"
extend-include = [".pyi?$", ".ipynb"]
extend-exclude = ["archive/*"]
respect-gitignore = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E1", "E4", "E7", "E9", "F", "I", "W1", "W2", "W3", "W6", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["aisql"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Path",
    "fastapi.Query",
]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# setuptools-scm considers all files tracked by git to be data files
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aisql"
description = "aisql: API server for TokenVisor."
readme = "README.md"
requires-python = "~=3.10"
# keywords = ["one", "two"]
license = { text = "Proprietary" }
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
dependencies = [
    "coverage~=7.6",
    "libsql-client~=0.3.1",
    "loguru~=0.7.2",
    "numpy>=1.26.4",
    "orjson~=3.10.7",
    "pandas~=2.2",
    "Pillow>=10.0.0",
    "pwdlib[argon2]>=0.2.1",
    "pycryptodomex~=3.21.0",
    "pydantic-extra-types~=2.9.0",
    "pydantic-settings>=2.0.3",
    "pydantic~=2.10.3",            # https://github.com/pydantic/pydantic/issues/8271
    "tqdm~=4.66.5",
    "typing_extensions>=4.12.2",
    "uuid-utils~=0.9.0",
    "uuid7~=0.1.0",
] # Sort your dependencies https://sortmylist.com/
dynamic = ["version"]

[project.optional-dependencies]
lint = ["ruff~=0.6.1"]
test = [
    "parameterized",
    "flaky~=3.8.1",
    "mypy~=1.11.1",
    "pytest-asyncio>=0.23.8",
    "pytest-cov",
    "pytest-timeout>=2.3.1",
    "pytest~=8.3.2",
    "freezegun",
]
docs = [
    "furo~=2024.8.6",              # Sphinx theme (nice looking, with dark mode)
    "myst-parser~=4.0.0",
    "sphinx-autobuild~=2024.4.16",
    "sphinx-copybutton~=0.5.2",
    "sphinx>=7.4.7",               # sphinx-rtd-theme requires < 8
    "sphinx_rtd_theme~=2.0.0",     # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "aisql[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# aisql = "aisql.scripts.example:main_cli"

[tool.setuptools.dynamic]
version = { attr = "aisql.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aisql = ["**/*.json", "**/*.parquet"]
